# gcp_budget_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: architecture.mdc  development-guide.mdc  project-structure.mdc
credentials/: client_secret_81141175628-8losj4gk6gqdjt342ktegirlrdr1isfr.apps.googleusercontent.com.json
deployment/: local.py  remote.py  test_session.py
gmail_agent/: agent.py  config.py  prompt.py  tools.py
src/: app.py
transaction_categorizer/: agent.py  config.py  gmail_tools.py  prompt.py  tools.py
transaction_categorizer/sub_agents/gmail_agent/: agent.py  config.py  gmail_tool.py  prompt.py
